# milvus-sdk-rust

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml
examples/: authentication.rs  collection.rs  index_example.rs  iterator.rs  query_search.rs  resource_groups.rs
src/: client.rs  collection.rs  database.rs  error.rs  iterator.rs  mutate.rs  partition.rs  query.rs  utils.rs
src/proto/: milvus.proto.common.rs  milvus.proto.feder.rs  milvus.proto.milvus.rs  milvus.proto.msg.rs  milvus.proto.rg.rs  milvus.proto.schema.rs
tests/: alias.rs  client.rs  collection.rs  partition.rs
tests/aggressivehpctesting/: mod.rs  phase_1_crud_and_indexing.rs  phase_2_search_and_query.rs  phase_3_soak_test.rs
tests/common/: mod.rs
tests/testsoutsideoftestsuite/: client_flush_collections.rs  client_search.rs  collection_get_collection_stats.rs  collection_get_compaction_state.rs  collection_list_collections.rs  collection_release_collection.rs  mutate_delete.rs  partition_create_partition.rs  partition_drop_partition.rs  partition_get_partition_stats.rs  partition_has_partition.rs  partition_list_partitions.rs
