[package]
name = "milvus-sdk-rust"
description = "The official Milvus Rust SDK"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "milvus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.37", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
strum = "0.28"
strum_macros = "0.28"
base64 = "0.22"
dashmap = "6.1"
futures = "0.3.31"
lazy_static = "1.5"
tonic-prost-build = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
rand = "0.10"

[[test]]
name = "client_with_timeout"
path = "tests/testsoutsideoftestsuite/client_with_timeout.rs"

[[test]]
name = "client_flush_collections"
path = "tests/testsoutsideoftestsuite/client_flush_collections.rs"

[[test]]
name = "client_search"
path = "tests/testsoutsideoftestsuite/client_search.rs"

[[test]]
name = "collection_list_collections"
path = "tests/testsoutsideoftestsuite/collection_list_collections.rs"

[[test]]
name = "collection_get_collection_stats"
path = "tests/testsoutsideoftestsuite/collection_get_collection_stats.rs"

[[test]]
name = "collection_release_collection"
path = "tests/testsoutsideoftestsuite/collection_release_collection.rs"

[[test]]
name = "collection_get_compaction_state"
path = "tests/testsoutsideoftestsuite/collection_get_compaction_state.rs"

[[test]]
name = "partition_create_partition"
path = "tests/testsoutsideoftestsuite/partition_create_partition.rs"

[[test]]
name = "partition_drop_partition"
path = "tests/testsoutsideoftestsuite/partition_drop_partition.rs"

[[test]]
name = "partition_list_partitions"
path = "tests/testsoutsideoftestsuite/partition_list_partitions.rs"

[[test]]
name = "partition_has_partition"
path = "tests/testsoutsideoftestsuite/partition_has_partition.rs"

[[test]]
name = "partition_get_partition_stats"
path = "tests/testsoutsideoftestsuite/partition_get_partition_stats.rs"

[[test]]
name = "mutate_delete"
path = "tests/testsoutsideoftestsuite/mutate_delete.rs"

[[test]]
name = "aggressive_hpc_testing"
path = "tests/aggressivehpctesting/mod.rs"
